--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
   <div class="card p-4" style="width: 400px;">
-    <h4 class="text-center mb-4">Login teste</h4>
+    <h4 class="text-center mb-4">Login</h4>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="mb-3">
@@ -14,6 +14,9 @@
       </div>
 
       <button type="submit" class="btn btn-primary w-100">Entrar</button>
+      <p class="mt-4 text-center">
+        Ainda não tem conta? <a routerLink="/auto-cadastro">Cadastre-se aqui</a>
+      </p>
 
       @if (erroLogin) {
         <div class="alert alert-danger mt-3">
