--- a/frontend/src/app/pages/auto-cadastro/auto-cadastro.component.html
+++ b/frontend/src/app/pages/auto-cadastro/auto-cadastro.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
   <div class="card p-4" style="width: 500px;">
-    <h4 class="text-center mb-4">Auto Cadastro</h4>
+    <h1 class="text-center mb-4">Auto Cadastro</h1>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="mb-3">
         <label class="form-label">Nome:</label>
@@ -8,15 +8,23 @@
       </div>
       <div class="mb-3">
         <label class="form-label">Email:</label>
-        <input class="form-control" formControlName="email" required type="email"/>
+        <input class="form-control" formControlName="email" (blur)="verificarEmail()"
+               required type="email"/>
+        @if (emailOcupado) {
+          <small style="color: red; margin-left: 5px">Email já cadastrado</small>
+        }
       </div>
       <div class="mb-3">
         <label class="form-label">CPF:</label>
-        <input class="form-control" formControlName="cpf" required/>
+        <input class="form-control" formControlName="cpf" (blur)="verificarCpf()"
+               required mask="000.000.000-00" placeholder="000.000.000-00"/>
+        @if (cpfOcupado) {
+          <small style="color: red; margin-left: 5px">CPF já cadastrado</small>
+        }
       </div>
       <div class="mb-3">
         <label class="form-label">CEP:</label>
-        <input class="form-control" formControlName="cep" (blur)="buscarCep()" required/>
+        <input class="form-control" formControlName="cep" (blur)="buscarCep()" required mask="00000-000"/>
       </div>
       <div class="mb-3">
         <label class="form-label">Numero:</label>
@@ -27,12 +35,16 @@
         <input class="form-control" formControlName="endereco" readonly required/>
       </div>
 
-      <button class="btn btn-primary w-100 my-3" type="submit">Cadastrar</button>
+      <button class="btn btn-primary w-100 my-3" type="submit" [disabled]="form.invalid || emailOcupado || cpfOcupado">
+        @if (loading) {
+          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        } @else {
+          Cadastrar
+        }
+      </button>
 
       @if (mensagemErro) {
-        <div class="mt-3" style="color:red">{{ mensagemErro }}</div>
-      } @else if (mensagemSucesso) {
-        <div class="mt-3" style="color:green">{{ mensagemSucesso }}</div>
+        <div class="mt-2 text-center" style="color:red">{{ mensagemErro }}</div>
       }
     </form>
   </div>
