--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
   <div class="card p-4" style="width: 400px;">
-    <h1 class="text-center mb-4">Login</h1>
+    <h1 class="text-center mb-3">Login</h1>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
@@ -16,7 +16,11 @@
 
       <button type="submit" class="btn btn-primary w-100 my-2">
 
-        Entrar
+        @if (loading) {
+          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        } @else {
+          Entrar
+        }
       </button>
 
       @if (erroLogin) {
