--- a/frontend/src/app/pages/paciente/paciente-home/paciente-home.component.html
+++ b/frontend/src/app/pages/paciente/paciente-home/paciente-home.component.html
@@ -1,14 +1,14 @@
 <div class="card shadow border-success mb-4">
   <div class="card-header bg-success text-white">
-    <h6 class="card-title mb-0">
-      <i class="bi bi-wallet2 me-1"></i> Seu Saldo Atual</h6>
+    <h3 class="card-title mb-0 text-center">
+      <i class="bi bi-wallet2 me-2"></i>Saldo Atual</h3>
   </div>
   <div class="card-body text-center">
     <h2 class="display-3 fw-bold text-success">{{ saldo }}<small class="fs-4"> pontos</small></h2>
     <p class="card-text text-muted">Estes pontos podem ser utilizados para agendar consultas</p>
   </div>
   <div class="card-footer bg-light">
-    <div class="d-grid gap-2">
+    <div class="d-grid">
       <a routerLink="/comprar-pontos" class="btn btn-outline-success">
         <i class="bi bi-plus-circle"></i> Adicionar Pontos
       </a>
