--- a/frontend/src/app/pages/auto-cadastro/auto-cadastro.component.html
+++ b/frontend/src/app/pages/auto-cadastro/auto-cadastro.component.html
@@ -3,7 +3,7 @@
     <i class="bi bi-arrow-left-circle-fill fs-1"></i>
   </button>
   <div class="card p-4" style="width: 500px;">
-    <h1 class="text-center mb-3">Auto Cadastro</h1>
+    <h3 class="text-center mb-3">Auto Cadastro</h3>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="mb-3">
         <label class="form-label">Nome:</label>
@@ -38,7 +38,7 @@
         <input class="form-control" formControlName="endereco" readonly required/>
       </div>
 
-      <button class="btn btn-primary w-100 my-2" type="submit" [disabled]="form.invalid || emailOcupado || cpfOcupado">
+      <button class="btn btn-primary w-100 mt-4" type="submit" [disabled]="form.invalid || emailOcupado || cpfOcupado">
         @if (loading) {
           <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
         } @else {
