--- a/frontend/src/app/layout/base-layout/base-layout.component.html
+++ b/frontend/src/app/layout/base-layout/base-layout.component.html
@@ -9,6 +9,7 @@
       <ul class="nav gap-3 justify-content-start">
         @if (tipo === 'PACIENTE') {
           <a routerLink="/paciente-home" class="{{getButtonClass('/paciente-home')}}">Início</a>
+          <a routerLink="/comprar-pontos" class="{{getButtonClass('/comprar-pontos')}}">Comprar Pontos</a>
           <a routerLink="/extrato-pontos" class="{{getButtonClass('/extrato-pontos')}}">Extrato de Pontos</a>
           <a routerLink="/agendar-consulta" class="{{getButtonClass('/agendar-consulta')}}">Agendar Consulta</a>
         }
