--- a/frontend/src/app/layout/base-layout/base-layout.component.html
+++ b/frontend/src/app/layout/base-layout/base-layout.component.html
@@ -12,6 +12,7 @@
           <a routerLink="/comprar-pontos" class="{{getButtonClass('/comprar-pontos')}}">Comprar Pontos</a>
           <a routerLink="/extrato-pontos" class="{{getButtonClass('/extrato-pontos')}}">Extrato de Pontos</a>
           <a routerLink="/agendar-consulta" class="{{getButtonClass('/agendar-consulta')}}">Agendar Consulta</a>
+          <a routerLink="/cancelar-consulta" class="{{getButtonClass('/cancelar-consulta')}}">Cancelar Consulta</a>
         }
 
         @if (tipo === 'FUNCIONARIO') {
