- Adiciona componente de Check-In com lógica de seleção e confirmação - Atualiza layout da navegação para incluir a opção de Check-In - Corrige status de agendamentos para 'CHECK_IN' e ajusta lógica de cancelamento - Melhora a estrutura do serviço de consulta e adiciona novos endpoints

--- a/frontend/src/app/layout/base-layout/base-layout.component.html
+++ b/frontend/src/app/layout/base-layout/base-layout.component.html
@@ -9,10 +9,10 @@
       <ul class="nav gap-3 justify-content-start">
         @if (tipo === 'PACIENTE') {
           <a routerLink="/paciente-home" class="{{getButtonClass('/paciente-home')}}">Início</a>
-          <a routerLink="/comprar-pontos" class="{{getButtonClass('/comprar-pontos')}}">Comprar Pontos</a>
-          <a routerLink="/extrato-pontos" class="{{getButtonClass('/extrato-pontos')}}">Extrato de Pontos</a>
           <a routerLink="/agendar-consulta" class="{{getButtonClass('/agendar-consulta')}}">Agendar Consulta</a>
+          <a routerLink="/check-in" class="{{getButtonClass('/check-in')}}">Realizar Check-In</a>
           <a routerLink="/cancelar-consulta" class="{{getButtonClass('/cancelar-consulta')}}">Cancelar Consulta</a>
+          <a routerLink="/extrato-pontos" class="{{getButtonClass('/extrato-pontos')}}">Extrato de Pontos</a>
         }
 
         @if (tipo === 'FUNCIONARIO') {
