- Adiciona lógica para carregar consultas disponíveis nas próximas 48 horas no componente FuncionarioHome - Implementa a exibição de detalhes da consulta selecionada com informações dos pacientes agendados - Adiciona funcionalidades para confirmar comparecimento, cancelar e realizar consultas - Atualiza o layout do componente FuncionarioHome para melhor apresentação das informações - Corrige a navegação para a rota do funcionário

--- a/frontend/src/app/layout/base-layout/base-layout.component.html
+++ b/frontend/src/app/layout/base-layout/base-layout.component.html
@@ -16,8 +16,7 @@
         }
 
         @if (tipo === 'FUNCIONARIO') {
-          <a routerLink="/funcionario-home" class="btn btn-outline-light btn-sm me-3">Pacientes</a>
-          <a routerLink="/consultas" class="btn btn-outline-light btn-sm">Consultas</a>
+          <a routerLink="/funcionario-home" class="{{getButtonClass('/funcionario-home')}}">Início</a>
         }
       </ul>
     </div>
