- Adiciona componente de Cadastro de Consulta com formulário para agendamento - Integra serviço de consulta para cadastrar novas consultas - Atualiza layout do componente FuncionarioHome para incluir link para Cadastro de Consulta - Formata valores monetários e CPF nos componentes relevantes

--- a/frontend/src/app/layout/base-layout/base-layout.component.html
+++ b/frontend/src/app/layout/base-layout/base-layout.component.html
@@ -17,6 +17,7 @@
 
         @if (tipo === 'FUNCIONARIO') {
           <a routerLink="/funcionario-home" class="{{getButtonClass('/funcionario-home')}}">Início</a>
+          <a routerLink="/cadastro-consulta" class="{{getButtonClass('/cadastro-consulta')}}">Cadastro de Consulta</a>
         }
       </ul>
     </div>
