- Adiciona guardas de rota para autenticação de Funcionário e Paciente - Implementa lógica de redirecionamento em caso de acesso não autorizado - Adiciona componente de gestão de funcionários com funcionalidades de cadastro e edição - Atualiza layout da navegação para incluir a opção de gestão de funcionários - Implementa lógica de cancelamento de consultas e devolução de pontos - Adiciona lógica de busca de consultas com filtro por médico ou especialidade

--- a/frontend/src/app/layout/base-layout/base-layout.component.html
+++ b/frontend/src/app/layout/base-layout/base-layout.component.html
@@ -18,6 +18,7 @@
         @if (tipo === 'FUNCIONARIO') {
           <a routerLink="/funcionario-home" class="{{getButtonClass('/funcionario-home')}}">Início</a>
           <a routerLink="/cadastro-consulta" class="{{getButtonClass('/cadastro-consulta')}}">Cadastro de Consulta</a>
+          <a routerLink="/crud-funcionario" class="{{getButtonClass('/crud-funcionario')}}">Gestão de Funcionários</a>
         }
       </ul>
     </div>
