--- a/frontend/src/app/pages/auto-cadastro/auto-cadastro.component.html
+++ b/frontend/src/app/pages/auto-cadastro/auto-cadastro.component.html
@@ -20,18 +20,27 @@
       <div class="mb-3">
         <label class="form-label">CPF:</label>
         <input class="form-control" formControlName="cpf" (blur)="verificarCpf()"
-               required mask="000.000.000-00" placeholder="000.000.000-00"/>
+               required mask="000.000.000-00" />
         @if (cpfOcupado) {
           <small style="color: red">CPF já cadastrado.</small>
         }
       </div>
       <div class="mb-3">
         <label class="form-label">CEP:</label>
-        <input class="form-control" formControlName="cep" (blur)="buscarCep()" required mask="00000-000"/>
+        <input class="form-control"
+               formControlName="cep"
+               (blur)="buscarCep()"
+               (input)="verificarComprimentoCep()"
+               required
+               mask="00000-000"/>
       </div>
       <div class="mb-3">
         <label class="form-label">Numero:</label>
-        <input class="form-control" formControlName="numero" (blur)="buscarCep()" required/>
+        <input class="form-control"
+               formControlName="numero"
+               (blur)="buscarCep()"
+               (input)="agendarBuscaPorNumero()"
+               required/>
       </div>
       <div class="mb-3">
         <label class="form-label">Endereço:</label>
