--- a/frontend/src/app/pages/paciente/paciente-home/paciente-home.component.html
+++ b/frontend/src/app/pages/paciente/paciente-home/paciente-home.component.html
@@ -33,8 +33,11 @@
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   <div>
                     <strong>{{ agendamento.dataHora | date:'short' }}</strong>
-                    <div>
+                    <div class="my-1">
                       {{ agendamento.medico }} - {{ agendamento.especialidade }}
+                    </div>
+                    <div class="my-1">
+                      Código: {{ agendamento.codigo }}
                     </div>
                   </div>
                   <span class="badge bg-info rounded-pill me-2">Agendado</span>
@@ -44,8 +47,11 @@
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   <div>
                     <strong>{{ agendamento.dataHora | date:'short' }}</strong>
-                    <div>
+                    <div class="my-1">
                       {{ agendamento.medico }} - {{ agendamento.especialidade }}
+                    </div>
+                    <div class="my-1">
+                      Código: {{ agendamento.codigo }}
                     </div>
                   </div>
                   <span class="badge bg-warning rounded-pill me-2">Check-in</span>
